Update SWAN configuration to detect all SRMs